<resources>
    <string name="app_name">FCT</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="mmu_new_student">New Student</string>
    <string name="mmu_new_company">New Company</string>
    <string name="list_business">Business</string>
    <string name="list_students">Students</string>
    <string name="list_visits">Visits</string>
    <string name="options_tools">Tools</string>
    <string name="options_about_it">About it</string>
    <string name="activity_main_imgHeader">HeaderImage</string>
    <string name="detail_student">Student Detail</string>
    <string name="list_visit">List Visit</string>
    <string name="observation">Observations:</string>
    <string name="schedule">Schedule: </string>
    <string name="error_unique_name">The name mush be unique.</string>
    <string name="error_unique_text">The name mush be unique.</string>
    <string name="error_hour"><![CDATA[Start Hour < End Hour]]></string>
    <string name="pref_init_view_key">prefInitialView</string>
    <string name="pref_def_days">pref_default_days</string>
    <string name="my_data">Developed by Laura Calvente Dominguez for I.E.S.Saladillo</string>
    <string name="okey">OK</string>
    <string name="preference_activity">Tools</string>
    <string name="visit">Visit details</string>
    <string name="preference1">ListNextVisitsFragment</string>
    <string name="preference2">ListStudentFragment</string>
    <string name="preference3">ListBusinesFragment</string>
    <string name="date">Date:</string>
    <string name="start_hour">Start Hour:</string>
    <string name="end_hour">End Hour:</string>
    <string name="message">This student will be deleted</string>
    <string name="undo">UNDO</string>
    <string name="mush_company">You mush create new company.</string>
</resources>
